--- a/_config.yml
+++ b/_config.yml
@@ -313,7 +313,7 @@ display_categories: ["external-services"] # these categories will be displayed o
 
 scholar:
   last_name: [Omoruyi]
-  first_name: [Osase]
+  first_name: [O]
 
   style: apa
   locale: en
