--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,5 +1,5 @@
 "tremblay":
-  - firstname: ["Grant", "G.", "G.R."]
+  - firstname: ["Grant", "G.", "G.R.", "G. R."]
     url: https://www.granttremblay.com/
 
 "somerville":
